Bug 433887 - Dock offset changes when compositor is suspended
Summary: Dock offset changes when compositor is suspended
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-03 03:59 UTC by Nicholas Serrano
Modified: 2021-03-07 20:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Dock offset changing when toggling compositing (466.94 KB, video/mp4)
2021-03-03 03:59 UTC, Nicholas Serrano
Details
Latte layout file (21.54 KB, text/plain)
2021-03-06 20:04 UTC, Nicholas Serrano
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicholas Serrano 2021-03-03 03:59:08 UTC
Created attachment 136333 [details]
Dock offset changing when toggling compositing

SUMMARY
When the compositor is suspended, the offset distance of the dock changes.

STEPS TO REPRODUCE
1. Change dock maximum length to 75%
2. Set Offset to 4%
3. Compare distance to edge of the screen before compositing is suspended and after

OBSERVED RESULT
Compositing effects are disabled and dock changes position.

EXPECTED RESULT
Compositing effects are disabled and dock stays in place.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Bedrock Linux 0.7.20beta2 Poki, Debian Testing stratum
(available in About System)
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
I've attached a video to help visualize what I'm talking about.
Comment 1 Nicholas Serrano 2021-03-03 04:06:13 UTC
Seems there was an issue with the attached video so here is a link: https://streamable.com/c60ro2
Comment 2 Michail Vourlakos 2021-03-06 16:43:30 UTC
send me your layout file please
Comment 3 Nicholas Serrano 2021-03-06 20:04:50 UTC
Created attachment 136439 [details]
Latte layout file
Comment 4 Michail Vourlakos 2021-03-06 20:34:09 UTC
Git commit c8676170f942c77b6b4b4cdda60c73184bfd2f3c by Michail Vourlakos.
Committed on 06/03/2021 at 20:32.
Pushed by mvourlakos into branch 'master'.

fix offset changing for !compositing mode

--do not change offset faulty for !compositing mode
for all cases. In the past all Views in !compositing
mode they were working as behaveAsPlasmaPanels, this
is no more the case.

M  +1    -1    containment/package/contents/ui/background/MultiLayered.qml

https://invent.kde.org/plasma/latte-dock/commit/c8676170f942c77b6b4b4cdda60c73184bfd2f3c
Comment 5 Nicholas Serrano 2021-03-06 21:49:02 UTC
Just built Latte from git with the latest fix. It seems now when compositing is suspended the affected dock just disappears. The other docks without an offset stay visible however the offset one only shows up with compositing enabled. Thanks for looking into this!
Comment 6 Michail Vourlakos 2021-03-07 06:11:03 UTC
Git commit a4e6570b057b1f406e2c1d31e36d86763632a063 by Michail Vourlakos.
Committed on 07/03/2021 at 06:10.
Pushed by mvourlakos into branch 'master'.

update mask properly for !compositing case

M  +7    -1    app/view/effects.cpp

https://invent.kde.org/plasma/latte-dock/commit/a4e6570b057b1f406e2c1d31e36d86763632a063
Comment 7 Michail Vourlakos 2021-03-07 06:37:40 UTC
Git commit f6e8125804a3e51b6c382007b495731604d06805 by Michail Vourlakos.
Committed on 07/03/2021 at 06:35.
Pushed by mvourlakos into branch 'master'.

fix background paddings based on custom Roundness

--when custom roundness is applied then background paddings
should always respect it independent of the plasma theme
default roundness

M  +13   -12   containment/package/contents/ui/background/MultiLayered.qml

https://invent.kde.org/plasma/latte-dock/commit/f6e8125804a3e51b6c382007b495731604d06805
Comment 8 Nicholas Serrano 2021-03-07 20:02:56 UTC
Perfect, tried out the latest commits and can confirm this is resolved now.