update mask properly for !compositing case

BUG:433887